--- a/styles/style_cursos.css
+++ b/styles/style_cursos.css
@@ -9,58 +9,6 @@ html {
     font-size: 10px;
 }
 
-header {
-    width: 100%;
-    height: 15vh;
-    background-color: blueviolet;
-}
-
-header h1 a {
-    color: white;
-    font-size: 5rem;
-}
-
-nav {
-    width: 98%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.nav_bar {
-    display: flex;
-}
-
-.nav_bar li a {
-    color: white;
-    font-size: 2.5rem;
-    margin: 0px 10px;
-}
-
-.nav_bar li:hover a {
-    color: rgb(187, 168, 133);
-}
-
-.nav_cadastro {
-    display: flex;
-}
-
-.nav_cadastro li a {
-    color: white;
-    font-size: 2.5rem;
-    margin: 0px 10px;
-}
-
-.nav_cadastro li:hover a {
-    color: rgb(187, 168, 133);
-}
-
-
-/*------------------------------------*/
-
 ._curso {
     margin-top: 50px;
 }
@@ -95,17 +43,32 @@ nav {
     bottom: 0;
     left: 0;
     margin: 50px auto auto auto;
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: auto;
+    justify-items: center;
+    row-gap: 50px;
+}
+
+.cursos2 {
+    position: relative;
+    width: 80%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: 50px auto auto auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-rows: auto;
+    justify-items: center;
+    row-gap: 50px;
 }
 
 .curso {
     width: 300px;
     height: 400px;
     background-color: blueviolet;
-    margin-bottom: 50px;
-    margin-left: 20px;
     border-radius: 10%;
     position: relative;
 }
@@ -120,6 +83,7 @@ nav {
 .info_text {
     width: 100%;
     height: 100%;
+    overflow: hidden;
 }
 
 .info_text h3 {
@@ -149,28 +113,11 @@ nav {
     margin-right: auto;
 }
 
-
-/*--------------------------------------------------------------------------------------*/
-
-footer {
-    width: 100%;
-    height: 15rem;
-    background-color: rgb(62, 31, 63);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
-}
-
-footer p {
-    color: white;
-    font-size: 1.5rem;
-    margin: 1rem;
-}
-
-footer p a {
-    color: yellow;
-    font-size: 2rem;
-    margin: 1rem;
+@media(max-width:1000px) {
+    .info_text h3 {
+        font-size: 3rem;
+    }
+    .info_text p {
+        font-size: 2rem;
+    }
 }
