--- a/styles/style_ec.css
+++ b/styles/style_ec.css
@@ -9,55 +9,6 @@ html {
     font-size: 10px;
 }
 
-header {
-    width: 100%;
-    height: 15vh;
-    background-color: blueviolet;
-}
-
-header h1 a {
-    color: white;
-    font-size: 5rem;
-}
-
-nav {
-    width: 98%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.nav_bar {
-    display: flex;
-}
-
-.nav_bar li a {
-    color: white;
-    font-size: 2.5rem;
-    margin: 0px 10px;
-}
-
-.nav_bar li:hover a {
-    color: rgb(187, 168, 133);
-}
-
-.nav_cadastro {
-    display: flex;
-}
-
-.nav_cadastro li a {
-    color: white;
-    font-size: 2.5rem;
-    margin: 0px 10px;
-}
-
-.nav_cadastro li:hover a {
-    color: rgb(187, 168, 133);
-}
-
 
 /*-----------------------------------------*/
 
@@ -75,6 +26,7 @@ main {
     height: 90vh;
     background-color: white;
     border-radius: 10%;
+    position: relative;
 }
 
 .cadastrar h1 {
@@ -110,12 +62,13 @@ form label {
 }
 
 button {
+    position: absolute;
+    bottom: 30px;
     width: 200px;
     height: 30px;
     display: block;
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
+    left: 50%;
+    transform: translateX(-50%);
     border: none;
     background-color: blueviolet;
     color: wheat;
@@ -147,26 +100,4 @@ form input:focus label {
 
 .p2 {
     top: 25%;
-}
-
-footer {
-    width: 100%;
-    height: 15rem;
-    background-color: rgb(62, 31, 63);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-footer p {
-    color: white;
-    font-size: 1.5rem;
-    margin: 1rem;
-}
-
-footer p a {
-    color: yellow;
-    font-size: 2rem;
-    margin: 1rem;
 }
