--- a/styles/style_forum.css
+++ b/styles/style_forum.css
@@ -9,55 +9,6 @@ html {
     font-size: 10px;
 }
 
-header {
-    width: 100%;
-    height: 15vh;
-    background-color: blueviolet;
-}
-
-header h1 a {
-    color: white;
-    font-size: 5rem;
-}
-
-nav {
-    width: 98%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.nav_bar {
-    display: flex;
-}
-
-.nav_bar li a {
-    color: white;
-    font-size: 2.5rem;
-    margin: 0px 10px;
-}
-
-.nav_bar li:hover a {
-    color: rgb(187, 168, 133);
-}
-
-.nav_cadastro {
-    display: flex;
-}
-
-.nav_cadastro li a {
-    color: white;
-    font-size: 2.5rem;
-    margin: 0px 10px;
-}
-
-.nav_cadastro li:hover a {
-    color: rgb(187, 168, 133);
-}
-
 .posts {
     margin-top: 100px;
     width: 100%;
@@ -115,24 +66,14 @@ nav {
     margin: 2.5px;
 }
 
-footer {
-    width: 100%;
-    height: 15rem;
-    background-color: rgb(62, 31, 63);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+@media(max-width:800px) {
+    .post {
+        width: 600px;
+    }
 }
 
-footer p {
-    color: white;
-    font-size: 1.5rem;
-    margin: 1rem;
-}
-
-footer p a {
-    color: yellow;
-    font-size: 2rem;
-    margin: 1rem;
+@media(max-width:600px) {
+    .post {
+        width: 400px;
+    }
 }
