--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -5,66 +5,8 @@
     list-style: none;
 }
 
-
-/*--------------------------------------------------------------------*/
-
 html {
     font-size: 10px;
-}
-
-header {
-    width: 100%;
-    height: 15vh;
-    background-color: blueviolet;
-    overflow: hidden;
-}
-
-header h1 a {
-    color: white;
-    font-size: 5rem;
-    max-width: 10rem;
-}
-
-
-/*--------------------------------------------------------------------*/
-
-nav {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.nav_bar {
-    display: flex;
-}
-
-.nav_bar li a {
-    color: white;
-    font-size: 2.5rem;
-    margin: 0px 10px;
-}
-
-.nav_bar li:hover a {
-    color: rgb(187, 168, 133);
-}
-
-.nav_cadastro {
-    display: flex;
-    margin-right: 10px;
-}
-
-.nav_cadastro li a {
-    color: white;
-    font-size: 2.5rem;
-    margin: 0px 10px;
-}
-
-.nav_cadastro li:hover a {
-    color: rgb(187, 168, 133);
 }
 
 
@@ -73,9 +15,6 @@ nav {
 .sessao_carrossel {
     width: 100%;
     height: 85vh;
-    background: #12c2e9;
-    background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
-    background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -86,6 +25,7 @@ nav {
     height: 80vh;
     overflow: hidden;
     display: flex;
+    border: 2px solid black;
 }
 
 .container {
@@ -176,6 +116,7 @@ nav {
 .wrapper_img img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .info_text {
@@ -192,8 +133,8 @@ nav {
 .info_text p {
     position: absolute;
     color: white;
-    font-size: 1.5rem;
-    bottom: 0;
+    font-size: 2rem;
+    top: 20;
     margin: 20px 10px;
     text-align: justify;
 }
@@ -201,25 +142,46 @@ nav {
 
 /*--------------------------------------------------------------------------------------*/
 
-footer {
-    width: 100%;
-    height: 15rem;
-    background-color: rgb(62, 31, 63);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
+@media(max-width:1000px) {
+    .sessao_carrossel {
+        width: 100%;
+        height: 85vh;
+    }
+    .carrossel {
+        width: 600px;
+        height: 80vh;
+    }
+    .img img {
+        width: 600px;
+    }
+    .new {
+        width: 600px;
+        height: 200px;
+        background-color: blueviolet;
+        margin-top: 80px;
+        position: relative;
+        border: 2px solid blueviolet;
+    }
 }
 
-footer p {
-    color: white;
-    font-size: 1.5rem;
-    margin: 1rem;
-}
-
-footer p a {
-    color: yellow;
-    font-size: 2rem;
-    margin: 1rem;
+@media(max-width:700px) {
+    .sessao_carrossel {
+        margin-top: 30px;
+        width: 100%;
+        height: 60vh;
+    }
+    .carrossel {
+        width: 400px;
+        height: 60vh;
+    }
+    .img img {
+        width: 400px;
+    }
+    .new {
+        width: 400px;
+        height: 300px;
+    }
+    .info_text p {
+        font-size: 2.5rem;
+    }
 }
