--- a/styles/header_footer.css
+++ b/styles/header_footer.css
@@ -99,15 +99,6 @@ footer p a {
     .nav_cadastromn {
         display: none;
     }
-}
-
-@media(max-width:700px) {
-    html {
-        font-size: 6px;
-    }
-}
-
-@media(max-width:600px) {
     html {
         font-size: 5px;
     }
@@ -159,7 +150,65 @@ footer p a {
 }
 
 
-/*@media(max-width:500px) {
+/*@media(max-width:700px) {
+    html {
+        font-size: 6px;
+    }
+}*/
+
+
+/*@media(max-width:600px) {
+    html {
+        font-size: 5px;
+    }
+    .menu {
+        display: flex;
+        position: fixed;
+        bottom: 0;
+        z-index: 10;
+        background-color: blueviolet;
+        width: 100%;
+        height: 5vh;
+        align-items: center;
+    }
+    .menu nav {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .nav_barmn {
+        display: flex;
+    }
+    .nav_cadastromn {
+        display: flex;
+    }
+    .nav_barmn li {
+        display: flex;
+        margin-right: 10px;
+    }
+    .nav_cadastromn li {
+        display: flex;
+        margin-right: 10px;
+    }
+    .nav_barmn a {
+        font-size: 3rem;
+        color: white;
+    }
+    .nav_cadastromn a {
+        font-size: 3rem;
+        color: white;
+    }
+    .nav_bar {
+        display: none;
+    }
+    .nav_cadastro {
+        display: none;
+    }
+    nav {
+        justify-content: center;
+    }
+}
+
+@media(max-width:500px) {
     html {
         font-size: 5px;
     }
