--- a/styles/style_index.css
+++ b/styles/style_index.css
@@ -175,10 +175,10 @@ html {
         height: 60vh;
     }
     .img img {
-        width: 400px;
+        width: 100%;
     }
     .new {
-        width: 400px;
+        width: 100%;
         height: 300px;
     }
     .info_text p {
